--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,7 @@ body {
   --color-dark-text-muted: #94a3b8;
   /* Slate 400 */
 
-  --color-dark-background: rgba(2, 6, 23, 1);
+  --color-dark-background: black;
   /* Slate 950 */
 
 
@@ -147,3 +147,14 @@ body {
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+.conic {
+  background: linear-gradient(
+  330deg,
+  rgba(54, 54, 54, .5),
+  rgba(21, 21, 21, .9),
+  rgba(182, 182, 182, .3)
+);
+
+}
+
