changed some ui

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,7 @@ body {
   /* Slate 800 */
   --color-dark-border-strong: #1e293b;
 
-  --color-dark-surface: #0f172a;
+  --color-dark-surface: #030712;
   /* Slate 900 */
   --color-dark-surface-hover: #1e293b;
   /* Slate 800 */
