fixed some architecture issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
+@import 'ldrs/react/Ring.css';
+@import 'ldrs/react/Ring2.css';
 @import "tailwindcss";
+
 
 .no-scrollbar::-webkit-scrollbar {
   display: none;
